2001-01-27  Karl Kleinpaste <karl@charcoal.com>

	* gnus-art.el (gnus-article-banner-alist): eGroups new banner.

2001-01-27 00:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-msg.el (gnus-msg-mail): Support switch-action.

2001-01-26 08:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-art.el (gnus-summary-save-in-pipe): Prompt for saving
	command if there is not last-saver.

2001-01-24 19:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* nntp.el (nntp-open-connection): 201 is possible.

2001-01-24 18:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* rfc2047.el (rfc2047-encode): MIME charset is not coding system.
	(rfc2047-charset-encoding-alist): Add big5.

2001-01-24 17:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-agent.el (gnus-agent-add-server): Redraw the line.
	(gnus-agent-remove-server): Ditto.
	(autoload): gnus-server-update-server.

	* gnus-srvr.el (gnus-server-line-format): Add %a.
	(gnus-server-line-format-alist): Add gnus-tmp-agent.
	(gnus-server-insert-server-line): Use it.

2001-01-24 09:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>
	
	* mm-util.el (mm-mime-mule-charset-alist): Preferred MIME names
	GB2312 and Big5.

2001-01-24  Simon Josefsson  <sj@extundo.com>

	* mail-source.el (mail-sources): Add :program specifier to IMAP
	mail source.
	(mail-source-fetch-imap): Map :program to `imap-shell-program'.

2001-01-24 08:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-score.el (gnus-score-lower-thread): Fix a doc typo.

2001-01-24 12:22:47  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nntp.el (nntp-wait-for): Return the success code.
	(nntp-open-connection): Use it.

2001-01-11 11:49:02  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-int.el (gnus-check-server): Allow breaking the opening. 

2001-01-23 11:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-sum.el (gnus-summary-print-article): Remove process mark.

2001-01-22 17:00:00  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-sum.el (gnus-summary-print-article): Take one prefix